--- a/css/backoffice/pages/_audit.scss
+++ b/css/backoffice/pages/_audit.scss
@@ -7,6 +7,8 @@ $ibo-audit--audit-category--panel--body--padding-x: $ibo-panel--body--padding-x 
 $ibo-audit--dashboard--padding-y: 18px !default;
 $ibo-audit--dashboard--padding-x: 0 !default;
 
+$ibo-audit--first-error-alert--margin-top: 24px !default;
+
 $ibo-audit--audit-line--csv-download--height: 2.5em !default;
 
 $ibo-audit--audit-line--status-indicator--diameter: 12px !default;
@@ -57,6 +59,9 @@ $ibo-audit--status--color: (
 }
 .ibo-audit--dashboard{
   padding: $ibo-audit--dashboard--padding-y $ibo-audit--dashboard--padding-x;
+}
+.ibo-dashboard--grid-row + .ibo-audit--error-alert{
+  margin-top: $ibo-audit--first-error-alert--margin-top;
 }
 .ibo-audit--audit-line--csv-download{
   height: $ibo-audit--audit-line--csv-download--height;
