--- a/templates/base/components/fieldset/layout.html.twig
+++ b/templates/base/components/fieldset/layout.html.twig
@@ -1,6 +1,6 @@
 {% if oUIBlock.GetSubBlocks() %}
     <fieldset class="ibo-fieldset{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %} {{ oUIBlock.GetAdditionalCSSClassesAsString() }}" id="{{ oUIBlock.GetId() }}">
-        <legend class="ibo-fieldset-legend">{{ oUIBlock.GetLegend() }}</legend>
+        <legend class="ibo-fieldset-legend">{{ oUIBlock.GetLegend()| raw }}</legend>
         {% for oSubBlock in oUIBlock.GetSubBlocks() %}
             {{ render_block(oSubBlock, {aPage: aPage}) }}
         {% endfor %}
