--- a/css/backoffice/pages/_impact-analysis.scss
+++ b/css/backoffice/pages/_impact-analysis.scss
@@ -3,6 +3,9 @@ $ibo-impact-analysis--graph-zoom-slider--width: 10em !default;
 
 $ibo-impact-analysis--graph-zoom-plus-minus--margin-x: 0.5em !default;
 
+$ibo-simple-graph--margin-top: 10px !default;
+$ibo-simple-graph--border-radius: 5px !default;
+$ibo-simple-graph--hover--border-color: 10px !default;
 $ibo-simple-graph--grouping-threshold-additional-context--container--margin-right: 0.3em !default;
 $ibo-simple-graph--grouping-threshold-additional-context--content--margin-right: 1em !default;
 
@@ -13,7 +16,15 @@ $ibo-display-graph--search-box--criterion--content--padding-x: 15px !default;
 
 $ibo-display-graph--search-box--criterion--content--checkbox--margin-right: 10px !default;
 
+.itop-simple-graph {
+  margin-top: $ibo-simple-graph--margin-top;
+  border: 1px dotted transparent;
+  border-radius: $ibo-simple-graph--border-radius;
 
+  &.ibo-has-focus {
+    border: 1px dotted $ibo-simple-graph--hover--border-color;
+  }
+}
 .graph_zoom {
   display: flex;
   float: right;
