--- a/css/backoffice/layout/_all.scss
+++ b/css/backoffice/layout/_all.scss
@@ -25,7 +25,7 @@
 @import "multi-column/column";
 @import "dashboard/all";
 @import "wizard-container/wizard-container";
-@import "object-details";
+@import "object/object-details";
 @import "activity-panel/activity-panel";
 @import "activity-panel/activity-entry";
 @import "activity-panel/caselog-entry";
