--- a/css/backoffice/layout/blocks-integrations/_all.scss
+++ b/css/backoffice/layout/blocks-integrations/_all.scss
@@ -6,5 +6,6 @@
 @import "caselog-entry-form-within-activity-panel";
 @import "panel-with-tab-container";
 @import "panel-with-datatable";
+@import "object-details-with-tab-container";
 @import "medallion-with-blocklist";
 @import "add-to-dashboard";
