Revert fix for tooltips in AjaxPage as pages with "application/json" content type actually return the HTML templates... 🤦‍♂️(eg. breaks the autocomplete results) - Fix only for ext. key modal

--- a/templates/pages/backoffice/ajaxpage/layout.html.twig
+++ b/templates/pages/backoffice/ajaxpage/layout.html.twig
@@ -68,18 +68,15 @@
                 }
             </script>
         {% endblock %}
+    {% else %}
+        {% block iboPageJsInlineOnDomReady %}
+            {% for sJsInlineOnDomReady in aPage.aJsInlineOnDomReady %}
+                <script type="text/javascript">
+                {{ sJsInlineOnDomReady|raw }}
+                </script>
+            {% endfor %}
+        {% endblock %}
     {% endif %}
-
-    {% block iboPageJsInlineOnDomReady %}
-        {% for sJsInlineOnDomReady in aPage.aJsInlineOnDomReady %}
-            <script type="text/javascript">
-            {{ sJsInlineOnDomReady|raw }}
-            </script>
-        {% endfor %}
-        <script type="application/javascript">
-        CombodoTooltip.InitAllNonInstantiatedTooltips($('body'));
-        </script>
-    {% endblock %}
 
     {% if aDeferredBlocks is not empty %}
         {# TODO 3.0.0 #}
