N°3566 Hub connector migrate to UiBlock : launch page Reset some iTop core styles to get back the previous rendering Also use iTop classes for title and buttons

--- a/datamodels/2.x/itop-hub-connector/css/hub.css
+++ b/datamodels/2.x/itop-hub-connector/css/hub.css
@@ -169,11 +169,12 @@
 #hub_launch_content button {
 	cursor: pointer;
 	font-weight: bold;
-	box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;	
+	box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
 	border: 0;
 	background-color: #E0E1E2;
 	height: 40px;
 	vertical-align: middle;
+	margin: 1.2rem 0;
 	padding: 0;
 }
 #hub_launch_content button.positive {
@@ -197,6 +198,7 @@
 	background-color: rgb(221, 113, 27);
 }
 #hub_launch_content button > img {
+	box-sizing: revert;
 	width: 16px;
 	height: 16px;
 	vertical-align: middle;
@@ -206,4 +208,8 @@
 .horiz-spacer {
 	display: inline-block;
 	width: 1.5em;
+}
+
+#hub_launch_content label {
+	cursor: pointer;
 }
